--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Best Plasces</title>
 </head>
 <body>
+  
 <header>
     <ul>
         <li>
             <a href=https://www.touropia.com/best-places-to-visit-in-jordan/#:~:text=The%20best%20place%20to%20visit%20in%20Jordan%2C%20and,Kingdom%20before%20becoming%20part%20of%20the%20Roman%20Empire.>Best Place to visit in Jordan</a>
+            <a href="https://93hamza.github.io/Jordan-places/">Hamza's page</a>
+            <a href="https://mohammadabuhatab.github.io/team-work-1/">Mohammad's</a>
+            <a href="https://anasomeir.github.io/BTDJ/">Anas's</a>
            
         </li>
     </ul>
@@ -18,6 +22,7 @@
 </header>
 <main>
     <img src="https://th.bing.com/th/id/OIP.yrW6TlrQB0hnVr48klHgFgHaE7?pid=ImgDet&rs=1" alt="Petra City in Jordan">
+
     <h1>Petra City:</h1>
     <p style="color: red;">The ancient city of Petra is one of the most prominent national treasures in Jordan, and the undisputed most popular tourist attraction. Petra was built by the Nabataeans, the industrious Arab people who settled in southern Jordan more than two thousand years ago. Petra continues to be admired by the whole world, as it is on the UNESCO World Heritage List, as it is one of the New Seven Wonders of the World. The site gained unrivaled distinction thanks to the culture it contained, the grandeur of the architecture involved in it, and the engineering genius in creating a complex system of dams and water canals. Petra was the home of the Nabataeans, the Edomites and the Romans, which made it a beacon of knowledge and a testament to the ingenuity of its inhabitants from the civilizations that in turn left this global marvel.</p>
 
